# theblas

./: .clang-format  .clang-tidy  .codespellrc  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  Makefile  README.md  SECURITY.md  conanfile.py  llms.txt  sonar-project.properties
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  copilot-instructions.md  dependabot.yml
.github/agents/: CodeReviewer.agent.md  DocWriter.agent.md  Explore.agent.md  PerfAnalyzer.agent.md  SecurityAuditor.agent.md  Tester.agent.md
.github/instructions/: agent-safety.instructions.md  code-review-generic.instructions.md  cpp-language-service-tools.instructions.md
.github/skills/ai-prompt-engineering-safety-review/: SKILL.md
.github/skills/code-reviewer/: SKILL.md
.github/skills/conventional-commit/: SKILL.md
.github/skills/convert-plaintext-to-md/: SKILL.md
.github/skills/create-llms/: SKILL.md
.github/skills/create-readme/: SKILL.md
.github/skills/create-tldr-page/: SKILL.md
.github/skills/doc-writer/: SKILL.md
.github/skills/documentation-writer/: SKILL.md
.github/skills/doublecheck/: SKILL.md
.github/skills/editorconfig/: SKILL.md
.github/skills/explore/: SKILL.md
.github/skills/perf-analyzer/: SKILL.md
.github/skills/refactor-method-complexity-reduce/: SKILL.md
.github/skills/repo-story-time/: SKILL.md
.github/skills/security-auditor/: SKILL.md
.github/skills/suggest-awesome-github-copilot-instructions/: SKILL.md
.github/skills/suggest-awesome-github-copilot-skills/: SKILL.md
.github/skills/technology-stack-blueprint-generator/: SKILL.md
.github/skills/tester/: SKILL.md
.github/workflows/: build.yml  codeql.yml  conan-test.yml  copilot-setup-steps.yml  coverage.yml  docs.yml  greetings.yml  grype.yml  makefile.yml  msvc.yml  release.yml  sbom.yml  sonarcloud.yml  stale.yml  vcpkg-test.yml
.sonarlint/: connectedMode.json
cmake/: theblasConfig.cmake.in
cmake/toolchains/: arm-linux-gnueabihf.cmake  arm-none-eabi.cmake  clang.cmake  msvc.cmake
docs/: index.html  math-reference.md
examples/: CMakeLists.txt  benchmark.cpp  complex_ops.cpp  matrix_vector_ops.cpp  vector_ops.cpp
include/theblas/: theblas.h  version.h.in
install/: .gitignore
ports/theblas/: portfile.cmake  usage  vcpkg.json
scripts/: extract-changelog.py  prepare-release.py
src/: theblas.cpp
test_package/: CMakeLists.txt  conanfile.py  main.cpp
tests/: CMakeLists.txt  test_theblas.cpp
versions/: baseline.json
versions/t-/: theblas.json
